methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs: error: not found: value move
		move(getY(),getDirection() == Direction.NORTH); 
                ^MethodsArgs:2: error: not found: value move
move(stepCount: Int, goForward: Boolean){
^MethodsArgs:2: error: not found: value stepCount
move(stepCount: Int, goForward: Boolean){
     ^MethodsArgs:2: error: not found: value goForward
move(stepCount: Int, goForward: Boolean){
                     ^MethodsArgs:3: error: not found: value goForward
  if(goForward()){
     ^MethodsArgs:4: error: not found: value stepCount
    for(i<-0 to stepCount-1){
                ^MethodsArgs:8: error: not found: value stepCount
    for(j<-0 to stepCount-1){
                ^